test/official_tests/super/super_without_dot.lox
class A {}

class B < A {
  method() {
    // error: {"line":6,"message":"Expect '.' after 'super'","type":"ParseError"}
    super;
  }
}
